# roar-net-api-py

./: .gitignore  .pre-commit-config.yaml  AUTHORS  README.md  pyproject.toml
.github/workflows/: publish.yml  python.yml  python_linters.yml  reuse.yml  uv_build.yml
examples/bkp/: bkp.py
examples/bkp/data/: bkp_1000_1_0_0_0.5_0.txt  bkp_1000_1_0_0_0.5_0.txt.license  bkp_100_1_0_0_0.5_0.txt  bkp_10_1_0_0_0.5_0.txt
examples/tsp/: tsp.py
examples/ubkp/: ubkp.py
examples/ubkp/data/: ubkp_10_1_0_0_0.txt  ubkp_20_1_0_0_1.txt  ubkp_40_1_0_0_2.txt
src/roar_net_api/: __init__.py
src/roar_net_api/algorithms/: __init__.py  beam_search.py  best_improvement.py  first_improvement.py  grasp.py  greedy_construction.py  pls.py  rls.py  sa.py  tabu_search.py  vns_fi.py
src/roar_net_api/api/operations/: __init__.py  apply_move.py  copy_solution.py  destruction_neighbourhood.py  empty_solution.py  invert_move.py  local_neighbourhood.py  lower_bound.py  lower_bound_increment.py  moves.py  objective_value.py  random_move.py  random_moves_without_replacement.py
src/roar_net_api/api/types/: move.py  neighbourhood.py  problem.py  solution.py
src/roar_net_api/operations/: __init__.py  construction_neighbourhood.py  heuristic_solution.py  invert_move.py  lower_bound.py  lower_bound_increment.py  moves.py  objective_value.py  objective_value_increment.py  random_solution.py  segments.py  sub_neighbourhoods.py
src/roar_net_api/types/: __init__.py  move.py  neighbourhood.py  problem.py
src/roar_net_api/values/: __init__.py  float.py  lexicographic.py  pareto.py
