# SPDX-FileCopyrightText: © 2025 Authors of the roar-net-api-py project <https://github.com/roar-net/roar-net-api-py/blob/main/AUTHORS>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "roar-net-api"
version = "0.1.0"
description = "Python implementation of the ROAR-NET API Specification"
license = "Apache-2.0 AND CC-BY-4.0"
license-files = ["LICENSES/*.txt"]
maintainers = [
    { name = "Alexandre Jesus", email = "me@adbjesus.com" },
    { name = "Carlos M. Fonseca", email = "cmfonsec@dei.uc.pt" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/roar-net/roar-net-api-py"
Issues = "https://github.com/roar-net/roar-net-api-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.16.0", "pyright>=1.1.401", "ruff>=0.11.8"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = ["src/", "examples/"]
strict = true

[tool.pyright]
strict = ["src", "examples"]
