# SPDX-FileCopyrightText: © 2025 Authors of the roar-net-api-py project <https://github.com/roar-net/roar-net-api-py/blob/main/AUTHORS>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "roar-net-api"
version = "0.1.1"
description = "Python implementation of the ROAR-NET API Specification"
license = "Apache-2.0 AND CC-BY-4.0"
license-files = ["LICENSES/*.txt"]
maintainers = [
    { name = "Alexandre Jesus", email = "me@adbjesus.com" },
    { name = "Carlos M. Fonseca", email = "cmfonsec@dei.uc.pt" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: OS Independent',
]
dependencies = []

[project.urls]
Repository = "https://github.com/roar-net/roar-net-api-py"
Issues = "https://github.com/roar-net/roar-net-api-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.16.0", "ruff>=0.11.8"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = ["src/", "examples/"]
strict = true
